[tool.poetry]
name = "chromatica"
version = "0.0.0"
description = "Chromatica is CNN for colorization photos"
authors = ["snail <snail1704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5"
numpy = "<=2.0"
datasets = "~2.19"
scikit-image = "~0.23"
clearml = "^1.16"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.poetry.scripts]
train = "chromatica.train:run"
# test = ...
# build = ...

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "G004",
  "D401",
  "RET504",
  "ISC001",
]
task-tags = ["HACK", "FIXME", "TODO"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
