[tool.poetry]
name = "chromatica"
version = "0.0.0"
description = "Chromatica is CNN for colorization photos"
authors = ["snail <snail1704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5"
torchvision = "^0.20.1"
numpy = "<=2.0"
scikit-image = "~0.23"
clearml = "^1.16"
tqdm = "^4.67.0"
pydantic = "^2.10.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.poetry.scripts]
dataset_create = "chromatica.dataset:create"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "G004",
  "D401",
  "RET504",
  "ISC001",
  "S101",
]
task-tags = ["HACK", "FIXME", "TODO"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
